tests/type-errors/general/unclosed_file.cx
import std::file;
import std::optional;

#include <stdlib.h>

int main() {
    std::file::file f = std::file::file::open("test.txt", "w").unwrap<std::file::file>();
    
    // Some extra work
    if (f.handle != NULL) {
        f.write_line("Hello, world!");
    }
    
    f.flush();
}
